# just-a-better-list

./: README.md  conftest.py  pyproject.toml
.github/workflows/: build_and_publish.yml  python-package.yml  qa.yml
ambl/: List.py
jabl/: __init__.py  jabl.py
notebooks/: Benchmarking.ipynb  Profiling.ipynb  Typing.ipynb
profiles/: numeric_ops.py
profiles/reports/: numeric_ops.prof
src/: __init__.py  jabl.py
test/integration/: test_chained_operations.py
test/unit/: test_developer_api.py  test_ops.py  test_typing.py  test_when_then_otherwise.py
