[tool.poetry]
name = "just-a-better-list"
version = "0.0.1"
description = "An attempt to make lists in Python more useful and functional"
authors = ["Nic Harvey <nicharvey@protonmail.com>"]
readme = "README.md"
packages = [{include = "just_a_better_list"}]

[tool.poetry.dependencies]
python = "^3.11"
mpire = {extras = ["dill"], version = "^2.6.0"}
beartype = "^0.12.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"


[tool.poetry.group.examples.dependencies]
ipykernel = "^6.5.0"
numpy = "^1.24.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
